Fixed alignment issue for score status

--- a/css/site.css
+++ b/css/site.css
@@ -86,7 +86,6 @@ ul{
 	visibility: hidden;
 }
 .q-score-track {
-	width: 85px;
-	margin-right: 40px;
+	margin-right: 50px;
 	float: right;
 }
